# MicroPython_MCP9808

./: LICENSE  README.rst  examples.json  package.json  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/_static/: favicon.ico.license
examples/: mcp9808_hysteresis.py  mcp9808_power_mode.py  mcp9808_simpletest.py  mcp9808_temperature_limits.py  mcp9808_temperature_resolution.py
micropython_mcp9808/: mcp9808.py
